260까지완 복습 필요

--- a/300제/기초 정리, 자료형.md
+++ b/300제/기초 정리, 자료형.md
@@ -177,3 +177,51 @@ a = [1,2,3,5,5]
 a.extend([1,2,3])
 [1,2,3,5,5,1,2,3]
 ```
+
+## 튜플
+리스트와의 차이는 리스트는 변경 가능하지만 튜플은 변경 불가
+
+*튜플은 값을 삭제 시도시 에러가 남.
+
+인덱싱, 슬라이싱, 더하기, 곱하기는 가능
+
+## 딕셔너리
+
+- 연관배열(Associative array) 또는 해시(Hash)라고 한다
+- *Key*를 통해 *Value*를 얻는다
+
+```
+만들때 주의사항 key거 중복되면 안 됨.
+*마지막 키만 남음.
+```
+
+```
+{}.keys() : key값들만 뽑을때 사용
+{}.values() : value 값들만 뽑을때 사용
+{}.items() : key, value가 쌍을 이루는 튜플로 변환
+{}.clear() : key : value 쌍 모두를 지움
+{}.get() : key 값을 통해 value값을 얻음
+	- []를 통해 없는 값을 입력시 에러가 나지만 get()을 통해 없는값을 입력시 None이라고 없음	  을 알려줌. {}.get(없는값, "")을 통해 특정한 ""를 불러올 수 있음.
+{}.in() : 해당 key가 딕셔너리 안에 있는지 조사 
+	- 있으면 True 없으면 False로 값을 알려줌.
+```
+
+
+
+## 집합 자료형
+
+- 집합에 관련된 것들을 쉽게 처리하기 위해 만들어진 자료형
+- 중복을 허용하지 않는다
+- 순서가 없다.(Unordered)
+
+```
+교집합
+s1 = set([1, 2, 3, 4, 5, 6])
+s2 = set([4, 5, 6, 7, 8, 9])
+a.
+s1 & s2
+{4, 5, 6}
+s1.intersection(s2)
+{4, 5, 6}
+```
+
